Fix text clipping in buttons

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -30,6 +30,7 @@ $transition-time: .5s;
 	p {
 		opacity: 0;
 		margin: 0 0 0 8px;
+		text-wrap: nowrap;
 		background: var(--header-button-text-background);
 		background-clip: text;
 		-webkit-background-clip: text;
